--- a/develop/sass/blocks/_product.scss
+++ b/develop/sass/blocks/_product.scss
@@ -42,6 +42,26 @@
     }
   }
 
+  &__reversed {
+    margin-top: 4.0625rem;
+
+    & > :first-child {
+      // grid-column: 1/2;
+
+      // transform: translateX(-29%);
+    }
+
+    & > :last-child {
+      // grid-column: 2/3;
+
+      // padding: 0;
+
+      p {
+        max-width: 48.7ch;
+      }
+    }
+  }
+
   @include breakpoint(tablet) {
     & {
       grid-gap: 0;
@@ -64,6 +84,21 @@
         p {
           text-align: start;
         }
+      }
+    }
+
+    &__reversed {
+      & > :first-child {
+        grid-column: 1/2;
+
+        transform: translateX(-29%);
+      }
+
+      & > :last-child {
+        grid-column: 2/3;
+        justify-self: center;
+
+        padding: 0;
       }
     }
   }
